--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,10 @@
     width: auto;
     align-items: center;
     }
+
+    .picSize {
+        max-width: 100%;
+    }
     
 }    
 
@@ -59,7 +63,7 @@
         display: flex;
         flex-direction: column;
         max-width: 100%;
-        align-content: stretch;
+        align-content: center;
         align-items: center;
         flex-wrap: wrap;
     }
@@ -69,6 +73,9 @@
         max-width: 100%;
         align-items: center;
     }
+    .picSize {
+        max-width: 75%;
+    }
 }
 
 @media screen and ( max-width: 375px) {
@@ -77,6 +84,9 @@
         flex-direction: column;
         max-width: 100%;
         align-items: center;
+    }
+    .picSize {
+        max-width: 50%;
     }
     
 }
